@@ -33,8 +33,6 @@ static int		DictExistsCmd(ClientData dummy, Tcl_Interp *interp,
 			    int objc, Tcl_Obj *const *objv);
 static int		DictFilterCmd(ClientData dummy, Tcl_Interp *interp,
 			    int objc, Tcl_Obj *const *objv);
-static int		DictForCmd(ClientData dummy, Tcl_Interp *interp,
-			    int objc, Tcl_Obj *const *objv);
 static int		DictGetCmd(ClientData dummy, Tcl_Interp *interp,
 			    int objc, Tcl_Obj *const *objv);
 static int		DictIncrCmd(ClientData dummy, Tcl_Interp *interp,
@@ -93,7 +91,7 @@ static const EnsembleImplMap implementationMap[] = {
     {"create",	DictCreateCmd },
     {"exists",	DictExistsCmd },
     {"filter",	DictFilterCmd },
-    {"for",	DictForCmd,	TclCompileDictForCmd, DictForNRCmd },
+    {"for",	NULL,		TclCompileDictForCmd, DictForNRCmd },
     {"get",	DictGetCmd,	TclCompileDictGetCmd },
     {"incr",	DictIncrCmd,	TclCompileDictIncrCmd },
     {"info",	DictInfoCmd },
@@ -2368,7 +2366,7 @@ DictAppendCmd(
 /*
  *----------------------------------------------------------------------
  *
- * DictForCmd --
+ * DictForNRCmd --
  *
  *	This function implements the "dict for" Tcl command. See the user
  *	documentation for details on what it does, and TIP#111 for the formal
@@ -2382,16 +2380,6 @@ DictAppendCmd(
  *
  *----------------------------------------------------------------------
  */
-
-static int
-DictForCmd(
-    ClientData dummy,
-    Tcl_Interp *interp,
-    int objc,
-    Tcl_Obj *const *objv)
-{
-    return Tcl_NRCallObjProc(interp, DictForNRCmd, dummy, objc, objv);
-}
 
 static int
 DictForNRCmd(
